// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ArbiterPage renders initial authenticated state with empty results 1`] = `
<div>
  <nav
    data-testid="navbar"
  />
  <div
    class="px-4 pb-8 bg-background-void min-h-screen"
  >
    <div
      class="flex items-center gap-3 mb-4"
    >
      <h1
        class="text-xl font-semibold text-text-heading"
      >
        Arbiter
      </h1>
      <span
        class="text-sm text-text-muted"
      >
        Industry Advisor
      </span>
    </div>
    <div
      data-open="true"
      data-testid="collapsible"
    >
      <div
        class="border border-overlay-subtle rounded-lg mb-6 bg-background-panel"
      >
        <div
          data-testid="collapsible-trigger"
        >
          <button
            class="w-full flex items-center justify-between px-4 py-3 hover:bg-interactive-hover rounded-t-lg transition-colors"
          >
            <span
              class="flex items-center gap-2 text-sm font-medium text-text-primary"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-settings2 lucide-settings-2 h-4 w-4 text-text-muted"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M14 17H5"
                />
                <path
                  d="M19 7h-9"
                />
                <circle
                  cx="17"
                  cy="17"
                  r="3"
                />
                <circle
                  cx="7"
                  cy="7"
                  r="3"
                />
              </svg>
              Production Structure Settings
            </span>
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-up h-4 w-4 text-text-muted"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m18 15-6-6-6 6"
              />
            </svg>
          </button>
        </div>
        <div
          data-testid="collapsible-content"
        >
          <div
            class="px-4 pb-4 border-t border-overlay-subtle"
          >
            <div
              class="flex flex-wrap gap-6 mt-4"
            >
              <div
                class="flex-1 min-w-[200px] space-y-3"
              >
                <h3
                  class="text-sm font-semibold text-text-heading border-b border-overlay-subtle pb-1"
                >
                  Reaction
                </h3>
                <div
                  class="space-y-1"
                >
                  <label
                    class="font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-xs text-text-secondary"
                  >
                    Structure
                  </label>
                  <div
                    data-testid="select"
                    data-value="tatara"
                  >
                    <div
                      role="combobox"
                    >
                      <span />
                    </div>
                    <div>
                      <div
                        data-value="station"
                        role="option"
                      >
                        Station
                      </div>
                      <div
                        data-value="raitaru"
                        role="option"
                      >
                        Raitaru
                      </div>
                      <div
                        data-value="azbel"
                        role="option"
                      >
                        Azbel
                      </div>
                      <div
                        data-value="sotiyo"
                        role="option"
                      >
                        Sotiyo
                      </div>
                      <div
                        data-value="athanor"
                        role="option"
                      >
                        Athanor
                      </div>
                      <div
                        data-value="tatara"
                        role="option"
                      >
                        Tatara
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="space-y-1"
                >
                  <label
                    class="font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-xs text-text-secondary"
                  >
                    Rig
                  </label>
                  <div
                    data-testid="select"
                    data-value="t2"
                  >
                    <div
                      role="combobox"
                    >
                      <span />
                    </div>
                    <div>
                      <div
                        data-value="none"
                        role="option"
                      >
                        None
                      </div>
                      <div
                        data-value="t1"
                        role="option"
                      >
                        T1
                      </div>
                      <div
                        data-value="t2"
                        role="option"
                      >
                        T2
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="space-y-1"
                >
                  <label
                    class="font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-xs text-text-secondary"
                  >
                    Security
                  </label>
                  <div
                    data-testid="select"
                    data-value="null"
                  >
                    <div
                      role="combobox"
                    >
                      <span />
                    </div>
                    <div>
                      <div
                        data-value="high"
                        role="option"
                      >
                        High Sec
                      </div>
                      <div
                        data-value="low"
                        role="option"
                      >
                        Low Sec
                      </div>
                      <div
                        data-value="null"
                        role="option"
                      >
                        Null Sec
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="space-y-1"
                >
                  <label
                    class="font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-xs text-text-secondary"
                  >
                    System
                  </label>
                  <input
                    class="flex w-full rounded-sm border border-[var(--color-border-dim)] bg-[var(--color-bg-void)] px-3 py-1 text-[var(--color-text-primary)] shadow-sm transition-all file:border-0 file:bg-transparent file:text-sm file:font-medium file:text-[var(--color-text-primary)] placeholder:text-[var(--color-text-muted)] focus-visible:outline-none focus-visible:border-[var(--color-primary-cyan)] focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] focus-visible:shadow-[var(--glow-cyan-sm)] disabled:cursor-not-allowed disabled:opacity-50 md:text-sm h-8 text-sm"
                    placeholder="System name"
                    value="Jita"
                  />
                </div>
              </div>
              <div
                class="flex-1 min-w-[200px] space-y-3"
              >
                <h3
                  class="text-sm font-semibold text-text-heading border-b border-overlay-subtle pb-1"
                >
                  Invention
                </h3>
                <div
                  class="space-y-1"
                >
                  <label
                    class="font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-xs text-text-secondary"
                  >
                    Structure
                  </label>
                  <div
                    data-testid="select"
                    data-value="raitaru"
                  >
                    <div
                      role="combobox"
                    >
                      <span />
                    </div>
                    <div>
                      <div
                        data-value="station"
                        role="option"
                      >
                        Station
                      </div>
                      <div
                        data-value="raitaru"
                        role="option"
                      >
                        Raitaru
                      </div>
                      <div
                        data-value="azbel"
                        role="option"
                      >
                        Azbel
                      </div>
                      <div
                        data-value="sotiyo"
                        role="option"
                      >
                        Sotiyo
                      </div>
                      <div
                        data-value="athanor"
                        role="option"
                      >
                        Athanor
                      </div>
                      <div
                        data-value="tatara"
                        role="option"
                      >
                        Tatara
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="space-y-1"
                >
                  <label
                    class="font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-xs text-text-secondary"
                  >
                    Rig
                  </label>
                  <div
                    data-testid="select"
                    data-value="t1"
                  >
                    <div
                      role="combobox"
                    >
                      <span />
                    </div>
                    <div>
                      <div
                        data-value="none"
                        role="option"
                      >
                        None
                      </div>
                      <div
                        data-value="t1"
                        role="option"
                      >
                        T1
                      </div>
                      <div
                        data-value="t2"
                        role="option"
                      >
                        T2
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="space-y-1"
                >
                  <label
                    class="font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-xs text-text-secondary"
                  >
                    Security
                  </label>
                  <div
                    data-testid="select"
                    data-value="high"
                  >
                    <div
                      role="combobox"
                    >
                      <span />
                    </div>
                    <div>
                      <div
                        data-value="high"
                        role="option"
                      >
                        High Sec
                      </div>
                      <div
                        data-value="low"
                        role="option"
                      >
                        Low Sec
                      </div>
                      <div
                        data-value="null"
                        role="option"
                      >
                        Null Sec
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="space-y-1"
                >
                  <label
                    class="font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-xs text-text-secondary"
                  >
                    System
                  </label>
                  <input
                    class="flex w-full rounded-sm border border-[var(--color-border-dim)] bg-[var(--color-bg-void)] px-3 py-1 text-[var(--color-text-primary)] shadow-sm transition-all file:border-0 file:bg-transparent file:text-sm file:font-medium file:text-[var(--color-text-primary)] placeholder:text-[var(--color-text-muted)] focus-visible:outline-none focus-visible:border-[var(--color-primary-cyan)] focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] focus-visible:shadow-[var(--glow-cyan-sm)] disabled:cursor-not-allowed disabled:opacity-50 md:text-sm h-8 text-sm"
                    placeholder="System name"
                    value="Jita"
                  />
                </div>
              </div>
              <div
                class="flex-1 min-w-[200px] space-y-3"
              >
                <h3
                  class="text-sm font-semibold text-text-heading border-b border-overlay-subtle pb-1"
                >
                  Component Build
                </h3>
                <div
                  class="space-y-1"
                >
                  <label
                    class="font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-xs text-text-secondary"
                  >
                    Structure
                  </label>
                  <div
                    data-testid="select"
                    data-value="raitaru"
                  >
                    <div
                      role="combobox"
                    >
                      <span />
                    </div>
                    <div>
                      <div
                        data-value="station"
                        role="option"
                      >
                        Station
                      </div>
                      <div
                        data-value="raitaru"
                        role="option"
                      >
                        Raitaru
                      </div>
                      <div
                        data-value="azbel"
                        role="option"
                      >
                        Azbel
                      </div>
                      <div
                        data-value="sotiyo"
                        role="option"
                      >
                        Sotiyo
                      </div>
                      <div
                        data-value="athanor"
                        role="option"
                      >
                        Athanor
                      </div>
                      <div
                        data-value="tatara"
                        role="option"
                      >
                        Tatara
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="space-y-1"
                >
                  <label
                    class="font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-xs text-text-secondary"
                  >
                    Rig
                  </label>
                  <div
                    data-testid="select"
                    data-value="t2"
                  >
                    <div
                      role="combobox"
                    >
                      <span />
                    </div>
                    <div>
                      <div
                        data-value="none"
                        role="option"
                      >
                        None
                      </div>
                      <div
                        data-value="t1"
                        role="option"
                      >
                        T1
                      </div>
                      <div
                        data-value="t2"
                        role="option"
                      >
                        T2
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="space-y-1"
                >
                  <label
                    class="font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-xs text-text-secondary"
                  >
                    Security
                  </label>
                  <div
                    data-testid="select"
                    data-value="null"
                  >
                    <div
                      role="combobox"
                    >
                      <span />
                    </div>
                    <div>
                      <div
                        data-value="high"
                        role="option"
                      >
                        High Sec
                      </div>
                      <div
                        data-value="low"
                        role="option"
                      >
                        Low Sec
                      </div>
                      <div
                        data-value="null"
                        role="option"
                      >
                        Null Sec
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="space-y-1"
                >
                  <label
                    class="font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-xs text-text-secondary"
                  >
                    System
                  </label>
                  <input
                    class="flex w-full rounded-sm border border-[var(--color-border-dim)] bg-[var(--color-bg-void)] px-3 py-1 text-[var(--color-text-primary)] shadow-sm transition-all file:border-0 file:bg-transparent file:text-sm file:font-medium file:text-[var(--color-text-primary)] placeholder:text-[var(--color-text-muted)] focus-visible:outline-none focus-visible:border-[var(--color-primary-cyan)] focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] focus-visible:shadow-[var(--glow-cyan-sm)] disabled:cursor-not-allowed disabled:opacity-50 md:text-sm h-8 text-sm"
                    placeholder="System name"
                    value="Jita"
                  />
                </div>
              </div>
              <div
                class="flex-1 min-w-[200px] space-y-3"
              >
                <h3
                  class="text-sm font-semibold text-text-heading border-b border-overlay-subtle pb-1"
                >
                  Final Build
                </h3>
                <div
                  class="space-y-1"
                >
                  <label
                    class="font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-xs text-text-secondary"
                  >
                    Structure
                  </label>
                  <div
                    data-testid="select"
                    data-value="azbel"
                  >
                    <div
                      role="combobox"
                    >
                      <span />
                    </div>
                    <div>
                      <div
                        data-value="station"
                        role="option"
                      >
                        Station
                      </div>
                      <div
                        data-value="raitaru"
                        role="option"
                      >
                        Raitaru
                      </div>
                      <div
                        data-value="azbel"
                        role="option"
                      >
                        Azbel
                      </div>
                      <div
                        data-value="sotiyo"
                        role="option"
                      >
                        Sotiyo
                      </div>
                      <div
                        data-value="athanor"
                        role="option"
                      >
                        Athanor
                      </div>
                      <div
                        data-value="tatara"
                        role="option"
                      >
                        Tatara
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="space-y-1"
                >
                  <label
                    class="font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-xs text-text-secondary"
                  >
                    Rig
                  </label>
                  <div
                    data-testid="select"
                    data-value="t2"
                  >
                    <div
                      role="combobox"
                    >
                      <span />
                    </div>
                    <div>
                      <div
                        data-value="none"
                        role="option"
                      >
                        None
                      </div>
                      <div
                        data-value="t1"
                        role="option"
                      >
                        T1
                      </div>
                      <div
                        data-value="t2"
                        role="option"
                      >
                        T2
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="space-y-1"
                >
                  <label
                    class="font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-xs text-text-secondary"
                  >
                    Security
                  </label>
                  <div
                    data-testid="select"
                    data-value="null"
                  >
                    <div
                      role="combobox"
                    >
                      <span />
                    </div>
                    <div>
                      <div
                        data-value="high"
                        role="option"
                      >
                        High Sec
                      </div>
                      <div
                        data-value="low"
                        role="option"
                      >
                        Low Sec
                      </div>
                      <div
                        data-value="null"
                        role="option"
                      >
                        Null Sec
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="space-y-1"
                >
                  <label
                    class="font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-xs text-text-secondary"
                  >
                    System
                  </label>
                  <input
                    class="flex w-full rounded-sm border border-[var(--color-border-dim)] bg-[var(--color-bg-void)] px-3 py-1 text-[var(--color-text-primary)] shadow-sm transition-all file:border-0 file:bg-transparent file:text-sm file:font-medium file:text-[var(--color-text-primary)] placeholder:text-[var(--color-text-muted)] focus-visible:outline-none focus-visible:border-[var(--color-primary-cyan)] focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] focus-visible:shadow-[var(--glow-cyan-sm)] disabled:cursor-not-allowed disabled:opacity-50 md:text-sm h-8 text-sm"
                    placeholder="System name"
                    value="Jita"
                  />
                </div>
              </div>
            </div>
            <div
              class="mt-4 flex justify-end"
            >
              <button
                class="inline-flex items-center justify-center gap-2 whitespace-nowrap transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-[var(--color-primary-cyan)] text-[var(--color-bg-void)] shadow hover:bg-[var(--color-cyan-muted)] font-semibold h-8 rounded-sm px-3 text-xs"
              >
                Save Settings
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="border border-overlay-subtle rounded-lg bg-background-panel"
    >
      <div
        class="flex items-center justify-between px-4 py-3 border-b border-overlay-subtle"
      >
        <div
          class="flex items-center gap-1"
        >
          <button
            class="px-3 py-1 text-sm rounded transition-colors bg-primary/10 text-primary"
          >
            All
          </button>
          <button
            class="px-3 py-1 text-sm rounded transition-colors text-text-muted hover:text-text-secondary"
          >
            Ships
          </button>
          <button
            class="px-3 py-1 text-sm rounded transition-colors text-text-muted hover:text-text-secondary"
          >
            Modules
          </button>
        </div>
        <div
          class="flex items-center gap-3"
        >
          <div
            class="flex items-center gap-1.5"
          >
            <span
              class="text-xs text-text-muted"
            >
              Sort:
            </span>
            <button
              class="px-3 py-1 text-xs rounded border transition-colors bg-primary/10 border-primary/30 text-primary"
            >
              Net Profit
            </button>
            <button
              class="px-3 py-1 text-xs rounded border transition-colors border-overlay-subtle text-text-muted hover:border-overlay-medium hover:text-text-secondary"
            >
              ROI
            </button>
            <button
              class="px-3 py-1 text-xs rounded border transition-colors border-overlay-subtle text-text-muted hover:border-overlay-medium hover:text-text-secondary"
            >
              ISK/Day
            </button>
          </div>
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-[var(--color-primary-cyan)] text-[var(--color-bg-void)] shadow hover:bg-[var(--color-cyan-muted)] font-semibold h-8 rounded-sm px-3 text-xs"
          >
            Scan Opportunities
          </button>
        </div>
      </div>
      <div
        class="px-4 py-2 border-b border-overlay-subtle"
      >
        <div
          class="relative max-w-xs"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-search absolute left-2.5 top-1/2 -translate-y-1/2 h-3.5 w-3.5 text-text-muted pointer-events-none"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m21 21-4.34-4.34"
            />
            <circle
              cx="11"
              cy="11"
              r="8"
            />
          </svg>
          <input
            class="flex w-full rounded-sm border px-3 py-1 text-[var(--color-text-primary)] shadow-sm transition-all file:border-0 file:bg-transparent file:text-sm file:font-medium file:text-[var(--color-text-primary)] placeholder:text-[var(--color-text-muted)] focus-visible:outline-none focus-visible:border-[var(--color-primary-cyan)] focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] focus-visible:shadow-[var(--glow-cyan-sm)] disabled:cursor-not-allowed disabled:opacity-50 md:text-sm pl-8 pr-8 h-8 text-sm bg-background-elevated border-overlay-subtle"
            placeholder="Search items..."
            value=""
          />
        </div>
      </div>
      <div
        class="flex flex-col items-center justify-center py-16 gap-2"
      >
        <p
          class="text-sm text-text-secondary"
        >
          Configure your structures above, then click Scan Opportunities
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`ArbiterPage renders loading state 1`] = `
<div>
  <div
    data-testid="loading"
  />
</div>
`;

exports[`ArbiterPage renders opportunities table after successful scan 1`] = `
<div>
  <nav
    data-testid="navbar"
  />
  <div
    class="px-4 pb-8 bg-background-void min-h-screen"
  >
    <div
      class="flex items-center gap-3 mb-4"
    >
      <h1
        class="text-xl font-semibold text-text-heading"
      >
        Arbiter
      </h1>
      <span
        class="text-sm text-text-muted"
      >
        Industry Advisor
      </span>
    </div>
    <div
      data-open="true"
      data-testid="collapsible"
    >
      <div
        class="border border-overlay-subtle rounded-lg mb-6 bg-background-panel"
      >
        <div
          data-testid="collapsible-trigger"
        >
          <button
            class="w-full flex items-center justify-between px-4 py-3 hover:bg-interactive-hover rounded-t-lg transition-colors"
          >
            <span
              class="flex items-center gap-2 text-sm font-medium text-text-primary"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-settings2 lucide-settings-2 h-4 w-4 text-text-muted"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M14 17H5"
                />
                <path
                  d="M19 7h-9"
                />
                <circle
                  cx="17"
                  cy="17"
                  r="3"
                />
                <circle
                  cx="7"
                  cy="7"
                  r="3"
                />
              </svg>
              Production Structure Settings
            </span>
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-up h-4 w-4 text-text-muted"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m18 15-6-6-6 6"
              />
            </svg>
          </button>
        </div>
        <div
          data-testid="collapsible-content"
        >
          <div
            class="px-4 pb-4 border-t border-overlay-subtle"
          >
            <div
              class="flex flex-wrap gap-6 mt-4"
            >
              <div
                class="flex-1 min-w-[200px] space-y-3"
              >
                <h3
                  class="text-sm font-semibold text-text-heading border-b border-overlay-subtle pb-1"
                >
                  Reaction
                </h3>
                <div
                  class="space-y-1"
                >
                  <label
                    class="font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-xs text-text-secondary"
                  >
                    Structure
                  </label>
                  <div
                    data-testid="select"
                    data-value="tatara"
                  >
                    <div
                      role="combobox"
                    >
                      <span />
                    </div>
                    <div>
                      <div
                        data-value="station"
                        role="option"
                      >
                        Station
                      </div>
                      <div
                        data-value="raitaru"
                        role="option"
                      >
                        Raitaru
                      </div>
                      <div
                        data-value="azbel"
                        role="option"
                      >
                        Azbel
                      </div>
                      <div
                        data-value="sotiyo"
                        role="option"
                      >
                        Sotiyo
                      </div>
                      <div
                        data-value="athanor"
                        role="option"
                      >
                        Athanor
                      </div>
                      <div
                        data-value="tatara"
                        role="option"
                      >
                        Tatara
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="space-y-1"
                >
                  <label
                    class="font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-xs text-text-secondary"
                  >
                    Rig
                  </label>
                  <div
                    data-testid="select"
                    data-value="t2"
                  >
                    <div
                      role="combobox"
                    >
                      <span />
                    </div>
                    <div>
                      <div
                        data-value="none"
                        role="option"
                      >
                        None
                      </div>
                      <div
                        data-value="t1"
                        role="option"
                      >
                        T1
                      </div>
                      <div
                        data-value="t2"
                        role="option"
                      >
                        T2
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="space-y-1"
                >
                  <label
                    class="font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-xs text-text-secondary"
                  >
                    Security
                  </label>
                  <div
                    data-testid="select"
                    data-value="null"
                  >
                    <div
                      role="combobox"
                    >
                      <span />
                    </div>
                    <div>
                      <div
                        data-value="high"
                        role="option"
                      >
                        High Sec
                      </div>
                      <div
                        data-value="low"
                        role="option"
                      >
                        Low Sec
                      </div>
                      <div
                        data-value="null"
                        role="option"
                      >
                        Null Sec
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="space-y-1"
                >
                  <label
                    class="font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-xs text-text-secondary"
                  >
                    System
                  </label>
                  <input
                    class="flex w-full rounded-sm border border-[var(--color-border-dim)] bg-[var(--color-bg-void)] px-3 py-1 text-[var(--color-text-primary)] shadow-sm transition-all file:border-0 file:bg-transparent file:text-sm file:font-medium file:text-[var(--color-text-primary)] placeholder:text-[var(--color-text-muted)] focus-visible:outline-none focus-visible:border-[var(--color-primary-cyan)] focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] focus-visible:shadow-[var(--glow-cyan-sm)] disabled:cursor-not-allowed disabled:opacity-50 md:text-sm h-8 text-sm"
                    placeholder="System name"
                    value="Jita"
                  />
                </div>
              </div>
              <div
                class="flex-1 min-w-[200px] space-y-3"
              >
                <h3
                  class="text-sm font-semibold text-text-heading border-b border-overlay-subtle pb-1"
                >
                  Invention
                </h3>
                <div
                  class="space-y-1"
                >
                  <label
                    class="font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-xs text-text-secondary"
                  >
                    Structure
                  </label>
                  <div
                    data-testid="select"
                    data-value="raitaru"
                  >
                    <div
                      role="combobox"
                    >
                      <span />
                    </div>
                    <div>
                      <div
                        data-value="station"
                        role="option"
                      >
                        Station
                      </div>
                      <div
                        data-value="raitaru"
                        role="option"
                      >
                        Raitaru
                      </div>
                      <div
                        data-value="azbel"
                        role="option"
                      >
                        Azbel
                      </div>
                      <div
                        data-value="sotiyo"
                        role="option"
                      >
                        Sotiyo
                      </div>
                      <div
                        data-value="athanor"
                        role="option"
                      >
                        Athanor
                      </div>
                      <div
                        data-value="tatara"
                        role="option"
                      >
                        Tatara
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="space-y-1"
                >
                  <label
                    class="font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-xs text-text-secondary"
                  >
                    Rig
                  </label>
                  <div
                    data-testid="select"
                    data-value="t1"
                  >
                    <div
                      role="combobox"
                    >
                      <span />
                    </div>
                    <div>
                      <div
                        data-value="none"
                        role="option"
                      >
                        None
                      </div>
                      <div
                        data-value="t1"
                        role="option"
                      >
                        T1
                      </div>
                      <div
                        data-value="t2"
                        role="option"
                      >
                        T2
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="space-y-1"
                >
                  <label
                    class="font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-xs text-text-secondary"
                  >
                    Security
                  </label>
                  <div
                    data-testid="select"
                    data-value="high"
                  >
                    <div
                      role="combobox"
                    >
                      <span />
                    </div>
                    <div>
                      <div
                        data-value="high"
                        role="option"
                      >
                        High Sec
                      </div>
                      <div
                        data-value="low"
                        role="option"
                      >
                        Low Sec
                      </div>
                      <div
                        data-value="null"
                        role="option"
                      >
                        Null Sec
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="space-y-1"
                >
                  <label
                    class="font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-xs text-text-secondary"
                  >
                    System
                  </label>
                  <input
                    class="flex w-full rounded-sm border border-[var(--color-border-dim)] bg-[var(--color-bg-void)] px-3 py-1 text-[var(--color-text-primary)] shadow-sm transition-all file:border-0 file:bg-transparent file:text-sm file:font-medium file:text-[var(--color-text-primary)] placeholder:text-[var(--color-text-muted)] focus-visible:outline-none focus-visible:border-[var(--color-primary-cyan)] focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] focus-visible:shadow-[var(--glow-cyan-sm)] disabled:cursor-not-allowed disabled:opacity-50 md:text-sm h-8 text-sm"
                    placeholder="System name"
                    value="Jita"
                  />
                </div>
              </div>
              <div
                class="flex-1 min-w-[200px] space-y-3"
              >
                <h3
                  class="text-sm font-semibold text-text-heading border-b border-overlay-subtle pb-1"
                >
                  Component Build
                </h3>
                <div
                  class="space-y-1"
                >
                  <label
                    class="font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-xs text-text-secondary"
                  >
                    Structure
                  </label>
                  <div
                    data-testid="select"
                    data-value="raitaru"
                  >
                    <div
                      role="combobox"
                    >
                      <span />
                    </div>
                    <div>
                      <div
                        data-value="station"
                        role="option"
                      >
                        Station
                      </div>
                      <div
                        data-value="raitaru"
                        role="option"
                      >
                        Raitaru
                      </div>
                      <div
                        data-value="azbel"
                        role="option"
                      >
                        Azbel
                      </div>
                      <div
                        data-value="sotiyo"
                        role="option"
                      >
                        Sotiyo
                      </div>
                      <div
                        data-value="athanor"
                        role="option"
                      >
                        Athanor
                      </div>
                      <div
                        data-value="tatara"
                        role="option"
                      >
                        Tatara
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="space-y-1"
                >
                  <label
                    class="font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-xs text-text-secondary"
                  >
                    Rig
                  </label>
                  <div
                    data-testid="select"
                    data-value="t2"
                  >
                    <div
                      role="combobox"
                    >
                      <span />
                    </div>
                    <div>
                      <div
                        data-value="none"
                        role="option"
                      >
                        None
                      </div>
                      <div
                        data-value="t1"
                        role="option"
                      >
                        T1
                      </div>
                      <div
                        data-value="t2"
                        role="option"
                      >
                        T2
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="space-y-1"
                >
                  <label
                    class="font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-xs text-text-secondary"
                  >
                    Security
                  </label>
                  <div
                    data-testid="select"
                    data-value="null"
                  >
                    <div
                      role="combobox"
                    >
                      <span />
                    </div>
                    <div>
                      <div
                        data-value="high"
                        role="option"
                      >
                        High Sec
                      </div>
                      <div
                        data-value="low"
                        role="option"
                      >
                        Low Sec
                      </div>
                      <div
                        data-value="null"
                        role="option"
                      >
                        Null Sec
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="space-y-1"
                >
                  <label
                    class="font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-xs text-text-secondary"
                  >
                    System
                  </label>
                  <input
                    class="flex w-full rounded-sm border border-[var(--color-border-dim)] bg-[var(--color-bg-void)] px-3 py-1 text-[var(--color-text-primary)] shadow-sm transition-all file:border-0 file:bg-transparent file:text-sm file:font-medium file:text-[var(--color-text-primary)] placeholder:text-[var(--color-text-muted)] focus-visible:outline-none focus-visible:border-[var(--color-primary-cyan)] focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] focus-visible:shadow-[var(--glow-cyan-sm)] disabled:cursor-not-allowed disabled:opacity-50 md:text-sm h-8 text-sm"
                    placeholder="System name"
                    value="Jita"
                  />
                </div>
              </div>
              <div
                class="flex-1 min-w-[200px] space-y-3"
              >
                <h3
                  class="text-sm font-semibold text-text-heading border-b border-overlay-subtle pb-1"
                >
                  Final Build
                </h3>
                <div
                  class="space-y-1"
                >
                  <label
                    class="font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-xs text-text-secondary"
                  >
                    Structure
                  </label>
                  <div
                    data-testid="select"
                    data-value="azbel"
                  >
                    <div
                      role="combobox"
                    >
                      <span />
                    </div>
                    <div>
                      <div
                        data-value="station"
                        role="option"
                      >
                        Station
                      </div>
                      <div
                        data-value="raitaru"
                        role="option"
                      >
                        Raitaru
                      </div>
                      <div
                        data-value="azbel"
                        role="option"
                      >
                        Azbel
                      </div>
                      <div
                        data-value="sotiyo"
                        role="option"
                      >
                        Sotiyo
                      </div>
                      <div
                        data-value="athanor"
                        role="option"
                      >
                        Athanor
                      </div>
                      <div
                        data-value="tatara"
                        role="option"
                      >
                        Tatara
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="space-y-1"
                >
                  <label
                    class="font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-xs text-text-secondary"
                  >
                    Rig
                  </label>
                  <div
                    data-testid="select"
                    data-value="t2"
                  >
                    <div
                      role="combobox"
                    >
                      <span />
                    </div>
                    <div>
                      <div
                        data-value="none"
                        role="option"
                      >
                        None
                      </div>
                      <div
                        data-value="t1"
                        role="option"
                      >
                        T1
                      </div>
                      <div
                        data-value="t2"
                        role="option"
                      >
                        T2
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="space-y-1"
                >
                  <label
                    class="font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-xs text-text-secondary"
                  >
                    Security
                  </label>
                  <div
                    data-testid="select"
                    data-value="null"
                  >
                    <div
                      role="combobox"
                    >
                      <span />
                    </div>
                    <div>
                      <div
                        data-value="high"
                        role="option"
                      >
                        High Sec
                      </div>
                      <div
                        data-value="low"
                        role="option"
                      >
                        Low Sec
                      </div>
                      <div
                        data-value="null"
                        role="option"
                      >
                        Null Sec
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="space-y-1"
                >
                  <label
                    class="font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-xs text-text-secondary"
                  >
                    System
                  </label>
                  <input
                    class="flex w-full rounded-sm border border-[var(--color-border-dim)] bg-[var(--color-bg-void)] px-3 py-1 text-[var(--color-text-primary)] shadow-sm transition-all file:border-0 file:bg-transparent file:text-sm file:font-medium file:text-[var(--color-text-primary)] placeholder:text-[var(--color-text-muted)] focus-visible:outline-none focus-visible:border-[var(--color-primary-cyan)] focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] focus-visible:shadow-[var(--glow-cyan-sm)] disabled:cursor-not-allowed disabled:opacity-50 md:text-sm h-8 text-sm"
                    placeholder="System name"
                    value="Jita"
                  />
                </div>
              </div>
            </div>
            <div
              class="mt-4 flex justify-end"
            >
              <button
                class="inline-flex items-center justify-center gap-2 whitespace-nowrap transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-[var(--color-primary-cyan)] text-[var(--color-bg-void)] shadow hover:bg-[var(--color-cyan-muted)] font-semibold h-8 rounded-sm px-3 text-xs"
              >
                Save Settings
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="border border-overlay-subtle rounded-lg bg-background-panel"
    >
      <div
        class="flex items-center justify-between px-4 py-3 border-b border-overlay-subtle"
      >
        <div
          class="flex items-center gap-1"
        >
          <button
            class="px-3 py-1 text-sm rounded transition-colors bg-primary/10 text-primary"
          >
            All
          </button>
          <button
            class="px-3 py-1 text-sm rounded transition-colors text-text-muted hover:text-text-secondary"
          >
            Ships
          </button>
          <button
            class="px-3 py-1 text-sm rounded transition-colors text-text-muted hover:text-text-secondary"
          >
            Modules
          </button>
        </div>
        <div
          class="flex items-center gap-3"
        >
          <div
            class="flex items-center gap-1.5"
          >
            <span
              class="text-xs text-text-muted"
            >
              Sort:
            </span>
            <button
              class="px-3 py-1 text-xs rounded border transition-colors bg-primary/10 border-primary/30 text-primary"
            >
              Net Profit
            </button>
            <button
              class="px-3 py-1 text-xs rounded border transition-colors border-overlay-subtle text-text-muted hover:border-overlay-medium hover:text-text-secondary"
            >
              ROI
            </button>
            <button
              class="px-3 py-1 text-xs rounded border transition-colors border-overlay-subtle text-text-muted hover:border-overlay-medium hover:text-text-secondary"
            >
              ISK/Day
            </button>
          </div>
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-[var(--color-primary-cyan)] text-[var(--color-bg-void)] shadow hover:bg-[var(--color-cyan-muted)] font-semibold h-8 rounded-sm px-3 text-xs"
          >
            Scan Opportunities
          </button>
        </div>
      </div>
      <div
        class="px-4 py-2 border-b border-overlay-subtle"
      >
        <div
          class="relative max-w-xs"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-search absolute left-2.5 top-1/2 -translate-y-1/2 h-3.5 w-3.5 text-text-muted pointer-events-none"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m21 21-4.34-4.34"
            />
            <circle
              cx="11"
              cy="11"
              r="8"
            />
          </svg>
          <input
            class="flex w-full rounded-sm border px-3 py-1 text-[var(--color-text-primary)] shadow-sm transition-all file:border-0 file:bg-transparent file:text-sm file:font-medium file:text-[var(--color-text-primary)] placeholder:text-[var(--color-text-muted)] focus-visible:outline-none focus-visible:border-[var(--color-primary-cyan)] focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] focus-visible:shadow-[var(--glow-cyan-sm)] disabled:cursor-not-allowed disabled:opacity-50 md:text-sm pl-8 pr-8 h-8 text-sm bg-background-elevated border-overlay-subtle"
            placeholder="Search items..."
            value=""
          />
        </div>
      </div>
      <div
        class="flex items-center gap-4 px-4 py-2 border-b border-overlay-subtle text-xs text-text-muted"
      >
        <span>
          Scanned 
          150
           blueprints
        </span>
        <span>
          Inventor: 
          <span
            class="text-text-secondary"
          >
            Inventor Alt
          </span>
        </span>
        <span>
          2
           result
          s
        </span>
      </div>
      <div
        class="relative w-full overflow-auto"
      >
        <table
          class="w-full caption-bottom text-sm"
        >
          <thead
            class="[&_tr]:border-b [&_tr]:border-[var(--color-border-active)]"
          >
            <tr
              class="border-b transition-colors data-[state=selected]:bg-muted border-overlay-subtle hover:bg-transparent"
            >
              <th
                class="h-10 px-2 text-left align-middle font-semibold uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] py-2 w-8 text-xs text-text-muted"
              >
                #
              </th>
              <th
                class="h-10 px-2 text-left align-middle font-semibold uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] py-2 text-xs text-text-muted"
              >
                Item
              </th>
              <th
                class="h-10 px-2 text-left align-middle font-semibold uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] py-2 text-xs text-text-muted"
              >
                <button
                  class="flex items-center gap-0.5 hover:text-text-primary transition-colors"
                  title="Sort: ships first"
                >
                  Category
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-chevrons-up-down h-3 w-3 inline-block ml-1 opacity-40"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m7 15 5 5 5-5"
                    />
                    <path
                      d="m7 9 5-5 5 5"
                    />
                  </svg>
                </button>
              </th>
              <th
                class="h-10 px-2 text-left align-middle font-semibold uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] py-2 text-xs text-text-muted"
              >
                Sell Price
              </th>
              <th
                class="h-10 px-2 text-left align-middle font-semibold uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] py-2 text-xs text-text-muted"
              >
                Total Cost
              </th>
              <th
                class="h-10 px-2 text-left align-middle font-semibold uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] py-2 text-xs text-text-muted"
              >
                Net Profit
              </th>
              <th
                class="h-10 px-2 text-left align-middle font-semibold uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] py-2 text-xs text-text-muted"
              >
                ROI
              </th>
              <th
                class="h-10 px-2 text-left align-middle font-semibold uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] py-2 text-xs text-text-muted"
              >
                ISK/Day
              </th>
              <th
                class="h-10 px-2 text-left align-middle font-semibold uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] py-2 text-xs text-text-muted"
              >
                Best Decryptor
              </th>
            </tr>
          </thead>
          <tbody
            class="[&_tr:last-child]:border-0"
          >
            <tr
              class="border-b border-[var(--color-border-dim)] transition-colors data-[state=selected]:bg-muted cursor-pointer hover:bg-interactive-hover"
            >
              <td
                class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] py-2 text-sm text-text-muted w-8"
              >
                1
              </td>
              <td
                class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] py-2"
              >
                <span
                  class="flex items-center gap-2 text-sm font-medium text-text-primary"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-chevron-right h-3.5 w-3.5 text-text-muted flex-shrink-0"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m9 18 6-6-6-6"
                    />
                  </svg>
                  Vagabond
                </span>
              </td>
              <td
                class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] py-2"
              >
                <div
                  class="inline-flex items-center rounded-sm font-semibold transition-colors focus:outline-none focus:ring-1 focus:ring-[var(--color-primary-cyan)] border shadow hover:bg-[var(--color-overlay-medium)] text-[10px] px-1.5 py-0 bg-blue-science/20 text-blue-science border-blue-science/30"
                >
                  ship
                </div>
              </td>
              <td
                class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] py-2 text-sm text-text-data-value font-mono"
              >
                450.00M ISK
              </td>
              <td
                class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] py-2 text-sm text-text-data-value font-mono"
              >
                320.00M ISK
              </td>
              <td
                class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] py-2 text-sm font-mono text-teal-success"
              >
                130.00M ISK
              </td>
              <td
                class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] py-2 text-sm font-mono text-teal-success"
              >
                40.6
                %
              </td>
              <td
                class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] py-2 text-sm text-text-data-value font-mono"
              >
                130.00M ISK
                /day
              </td>
              <td
                class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] py-2 text-sm text-text-secondary"
              >
                Accelerant Decryptor
              </td>
            </tr>
            <tr
              class="border-b border-[var(--color-border-dim)] transition-colors data-[state=selected]:bg-muted cursor-pointer hover:bg-interactive-hover"
            >
              <td
                class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] py-2 text-sm text-text-muted w-8"
              >
                2
              </td>
              <td
                class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] py-2"
              >
                <span
                  class="flex items-center gap-2 text-sm font-medium text-text-primary"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-chevron-right h-3.5 w-3.5 text-text-muted flex-shrink-0"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m9 18 6-6-6-6"
                    />
                  </svg>
                  Caldari Navy Kinetic Plating
                </span>
              </td>
              <td
                class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] py-2"
              >
                <div
                  class="inline-flex items-center rounded-sm font-semibold transition-colors focus:outline-none focus:ring-1 focus:ring-[var(--color-primary-cyan)] border shadow hover:bg-[var(--color-overlay-medium)] text-[10px] px-1.5 py-0 bg-category-violet/20 text-category-violet border-category-violet/30"
                >
                  module
                </div>
              </td>
              <td
                class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] py-2 text-sm text-text-data-value font-mono"
              >
                12.00M ISK
              </td>
              <td
                class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] py-2 text-sm text-text-data-value font-mono"
              >
                11.00M ISK
              </td>
              <td
                class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] py-2 text-sm font-mono text-teal-success"
              >
                1.00M ISK
              </td>
              <td
                class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] py-2 text-sm font-mono text-teal-success"
              >
                9.1
                %
              </td>
              <td
                class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] py-2 text-sm text-text-data-value font-mono"
              >
                4.00M ISK
                /day
              </td>
              <td
                class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] py-2 text-sm text-text-secondary"
              >
                Symmetry Decryptor
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`ArbiterPage renders unauthorized state 1`] = `
<div>
  <div
    data-testid="unauthorized"
  />
</div>
`;
